--- a/index copy.html
+++ b/index copy.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -34,7 +35,11 @@
 
       <main id="main-element">
         <!-- Home page -->
-
+        <section id="hero">
+          <h1>
+            Accelerate Your Passion Unleash the Thrill of Sport Cars Together!
+          </h1>
+        </section>
 
         <!-- Dashboard page -->
         <h3 class="heading">Our Cars</h3>
@@ -75,10 +80,53 @@
         <h3 class="nothing">Nothing to see yet</h3>
 
         <!-- Register Page (Only for Guest users) -->
-        
+        <section id="register">
+          <div class="form">
+            <h2>Register</h2>
+            <form class="register-form">
+              <input
+                type="text"
+                name="email"
+                id="register-email"
+                placeholder="email"
+              />
+              <input
+                type="password"
+                name="password"
+                id="register-password"
+                placeholder="password"
+              />
+              <input
+                type="password"
+                name="re-password"
+                id="repeat-password"
+                placeholder="repeat password"
+              />
+              <button type="submit">register</button>
+              <p class="message">Already registered? <a href="#">Login</a></p>
+            </form>
+          </div>
+        </section>
 
         <!-- Login Page (Only for Guest users) -->
-
+        <section id="login">
+          <div class="form">
+            <h2>Login</h2>
+            <form class="login-form">
+              <input type="text" name="email" id="email" placeholder="email" />
+              <input
+                type="password"
+                name="password"
+                id="password"
+                placeholder="password"
+              />
+              <button type="submit">login</button>
+              <p class="message">
+                Not registered? <a href="#">Create an account</a>
+              </p>
+            </form>
+          </div>
+        </section>
 
         <!-- Create Page (Only for logged-in users) -->
         <section id="create">
